Creado mediante Colaboratory

--- a/Semana 6/Redes_Bayesianas_alertas_médicas.ipynb
+++ b/Semana 6/Redes_Bayesianas_alertas_médicas.ipynb
@@ -6,7 +6,7 @@
       "name": "Redes Bayesianas_alertas médicas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMaeXvnoknkPmlo+Smlf3Az",
+      "authorship_tag": "ABX9TyNKkD3nMz1ezhhKZLPZhel+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,9 +35,9 @@
         "outputId": "3cf8286f-78f4-49a0-92d2-0110d02bc009"
       },
       "source": [
-        "!pip install pyagrum  # permite utilicar biblioteca C++ aGrUM"
+        "!pip install pyagrum  # permite utilizar biblioteca C++ aGrUM"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,11 +57,11 @@
         "id": "ZgOGpi5nhUjQ"
       },
       "source": [
-        "import pyAgrum as gum\r\n",
-        "import pyAgrum.lib.notebook as gnb\r\n",
+        "import pyAgrum as gum\n",
+        "import pyAgrum.lib.notebook as gnb\n",
         "import pandas as pd"
       ],
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,9 +70,9 @@
         "id": "2sDAE4VSmoAe"
       },
       "source": [
-        "# Cargar y leer archivos de datos\r\n",
-        "\r\n",
-        "1.   alarm.bif  \r\n",
+        "# Cargar y leer archivos de datos\n",
+        "\n",
+        "1.   alarm.bif  \n",
         "2.   dic_alarm.csv"
       ]
     },
@@ -101,10 +101,10 @@
         "outputId": "2c3ea599-5d44-4685-8e34-9a5c4a88c43d"
       },
       "source": [
-        "from google.colab import files\r\n",
+        "from google.colab import files\n",
         "files.upload()  #subir archivo \"alarm.bif\""
       ],
-      "execution_count": 240,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -154,10 +154,10 @@
         "id": "JO-90gIfizpH"
       },
       "source": [
-        "#Red Bayesiana\r\n",
-        "bn = gum.loadBN(\"alarm.bif\") \r\n"
+        "#Red Bayesiana\n",
+        "bn = gum.loadBN(\"alarm.bif\") \n"
       ],
-      "execution_count": 211,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,13 +170,13 @@
         "outputId": "a5ebf5ae-3b23-43fc-efc9-3a77cfdf7863"
       },
       "source": [
-        "# diccionario de variables\r\n",
-        "variables = pd.read_csv('dic_alarm.csv',\r\n",
-        "                        usecols = ['id','nombre','descripcion','categorias','clase'],\r\n",
-        "                        index_col = ['id'])\r\n",
+        "# diccionario de variables\n",
+        "variables = pd.read_csv('dic_alarm.csv',\n",
+        "                        usecols = ['id','nombre','descripcion','categorias','clase'],\n",
+        "                        index_col = ['id'])\n",
         "variables.shape"
       ],
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,10 +211,10 @@
         "outputId": "3140015d-56de-4a75-8eab-2159a93055bd"
       },
       "source": [
-        "#¿cuántas variables y dependencias entre variables tenemos?\r\n",
+        "#¿cuántas variables y dependencias entre variables tenemos?\n",
         "print(bn)"
       ],
-      "execution_count": 212,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
       "source": [
         "gnb.showBN(bn, size=\"7\")"
       ],
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -266,7 +266,7 @@
       "source": [
         "variables['clase'].value_counts()"
       ],
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -298,7 +298,7 @@
       "source": [
         "variables[variables['clase']=='Alarma']"
       ],
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +431,7 @@
       "source": [
         "gnb.showPosterior(bn,evs={},target='HYPOVOLEMIA')"
       ],
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -458,10 +458,10 @@
         "outputId": "c70bc89f-91f3-41a7-d66f-273251df03af"
       },
       "source": [
-        "gnb.showPosterior(bn,evs={\"CVP\": \"HIGH\",\"PCWP\":\"HIGH\", \"BP\":\"LOW\", \"CO\":\"LOW\"},\r\n",
+        "gnb.showPosterior(bn,evs={\"CVP\": \"HIGH\",\"PCWP\":\"HIGH\", \"BP\":\"LOW\", \"CO\":\"LOW\"},\n",
         "                  target='HYPOVOLEMIA')"
       ],
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -488,10 +488,10 @@
         "outputId": "1a0a27db-0f0a-4ea1-e6cc-8fb5fabceca9"
       },
       "source": [
-        "gnb.showPosterior(bn,evs={\"HRSAT\": \"LOW\",\"PCWP\":\"LOW\", \"BP\":\"LOW\", \"SAO2\":\"LOW\"},\r\n",
+        "gnb.showPosterior(bn,evs={\"HRSAT\": \"LOW\",\"PCWP\":\"LOW\", \"BP\":\"LOW\", \"SAO2\":\"LOW\"},\n",
         "                  target='INSUFFANESTH')"
       ],
-      "execution_count": 232,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -520,7 +520,7 @@
       "source": [
         "gnb.showInference(bn,evs={}, size=10)"
       ],
-      "execution_count": 271,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -547,11 +547,11 @@
         "outputId": "2c0889fc-0978-4440-ccbd-6f3790978497"
       },
       "source": [
-        "gnb.showInference(bn,evs={\"VENTLUNG\":\"HIGH\", \"SAO2\":\"HIGH\",\r\n",
-        "                          \"PRESS\": \"HIGH\", \"CATECHOL\":\"HIGH\",\r\n",
+        "gnb.showInference(bn,evs={\"VENTLUNG\":\"HIGH\", \"SAO2\":\"HIGH\",\n",
+        "                          \"PRESS\": \"HIGH\", \"CATECHOL\":\"HIGH\",\n",
         "                          \"SHUNT\":\"HIGH\"}, size=10)"
       ],
-      "execution_count": 270,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
